along with this program. If not, see <http://www.gnu.org/licenses/>.

CHANGELOG
=========

v30.0.00
--------

    Headlines
        Added a new Student Alerts module to manage automatic and manual alerts

    Security

    Changes With Important Notices
        Added a Pastoral heading to the main menu and moved Behaviour, Attendance and Individual Needs

    Tweaks & Additions
        System: updated SpreadsheetRenderer to support exporting data from multiple DataTables
        System: switched interface strings from Value Added License to Catalyst License
        Activities: added the option for parents to register their children in activities
        Activities: added student tags on the Manage Enrolment page
        Activities: added a description field to the cost section for activities
        Activities: included the photos in the new copy when an activity is duplicated
        Behaviour: added Add Multiple button to Behaviour tab of student profile
        Formal Assessment: added a Year Group filter option to Manage External Assessment
        Individual Needs: enabled viewing IN records for past students as read-only
        Library: added the option to send an email to parents when lending a library item
        Messenger: enabled resending to any recipient when read receipts are off in Send Report
        Messenger: added clarifying text to Applicants target which only includes Accepted applications
        Messenger: enabled users with Manage Messages_all access to see shareable link in Send Report
        Planner: added a highlight for Off Timetable students in View Lesson Plan attendance list
        Planner: added a button to access Linked Markbook from Edit Lesson Plan page
        Planner: added a highlight for Off Timetable Lessons in the "Year Overview" mode
        Planner: added the option to use smart block names as lesson names in Deploy Lessons
        Planner: added an Online Lesson option in the planner to display a video call link